# config/swagger.json
@@ -11,19 +11,180 @@
                 "scheme":"bearer",
                 "bearerFormat":"JWT"
             }
+        },
+        "schemas":{
+            "Event":{
+                "type":"object",
+                "properties":{
+                    "eventname":{
+                        "type":"string"
+                    },
+                    "date":{
+                        "type":"string",
+                        "format":"date"
+                    },
+                    "time":{
+                        "type":"string"
+                    },
+                    "location":{
+                        "type":"string"
+                    },
+                    "image":{
+                        "type":"string"
+                    }
+                }
+            },
+            "Auth":{
+                "type":"object",
+                    "properties":{
+                        "email":{
+                            "type":"string",
+                            "format":"email"
+                        },
+                        "password":{
+                            "type":"string",
+                            "format":"password"
+                        }
+             }
+            }
         }
     },
     "paths":{
-        "/event":{
+        "/event/list/{limit}/{offset}":{
             "get":{
                 "tags":[
                     "Event"
                 ],
-                "summary":"Get list event",
+                "summary":"Get list limit event",
                 "security":[{ "Bearer": [] }],
+                "parameters":[
+                    {
+                        "name":"limit",
+                        "in":"path",
+                        "description":"Limit list event",
+                        "required":true,
+                        "schema":{
+                            "type":"string"
+                        }
+                    },
+                    {
+                        "name":"offset",
+                        "in":"path",
+                        "description":"Offset list user",
+                        "required":true,
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                ],
                 "responses":{
                     "200":{
                         "description":"List Event"
+                    }
+                }
+            }
+        },
+        "/event":{
+            "post":{
+                "tags":[
+                    "Event"
+                ],
+                "summary":"Create new event",
+                "security":[{ "Bearer": [] }],
+                    "requestBody":{
+                        "required":true,
+                        "content":{
+                            "application/json":{
+                                "schema":{
+                                    "$ref":"#/components/schemas/Event"
+                                }
+                            }
+                        }
+                    },
+                "responses":{
+                    "201":{
+                        "description":"Event created"
+                    }
+                }
+            }
+        },
+        "/event/{id}":{
+            "get":{
+                "tags":[
+                    "Event"
+                ],
+                "summary":"Get event by id",
+                "security":[{ "Bearer": [] }],
+                "parameters":[
+                    {
+                        "name":"id",
+                        "in":"path",
+                        "description":"ID of event",
+                        "required":true,
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"Event Found"
+                    }
+                }
+            },
+            "put":{
+                "tags":[
+                    "Event"
+                ],
+                "summary":"Update event",
+                "security":[{ "Bearer": [] }],
+                "parameters":[
+                    {
+                        "name":"id",
+                        "in":"path",
+                        "description":"ID of event",
+                        "required":true,
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                ],
+                "requestBody":{
+                    "required":true,
+                    "content":{
+                        "application/json":{
+                            "schema":{
+                                "$ref":"#/components/schemas/Event"
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "200":{
+                        "description":"Event Updated"
+                    }
+                }
+            },
+            "delete":{
+                "tags":[
+                    "Event"
+                ],
+                "summary":"Delete event",
+                "security":[{ "Bearer": [] }],
+                "parameters":[
+                    {
+                        "name":"id",
+                        "in":"path",
+                        "description":"ID of event",
+                        "required":true,
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"Event Deleted"
                     }
                 }
             }
@@ -39,17 +200,7 @@
                     "content":{
                         "application/json":{
                             "schema":{
-                                "type":"object",
-                                "properties":{
-                                    "email":{
-                                        "type":"string",
-                                        "example":"tes@gmail.com"
-                                    },
-                                    "password":{
-                                        "type":"string",
-                                        "example":"123456"
-                                    }
-                                }
+                                "$ref":"#/components/schemas/Auth"
                             }
                         }
                     }
@@ -85,17 +236,7 @@
                     "content":{
                         "application/json":{
                             "schema":{
-                                "type":"object",
-                                "properties":{
-                                    "email":{
-                                        "type":"string",
-                                        "example":"tes@gmail.com"
-                                    },
-                                    "password":{
-                                        "type":"string",
-                                        "example":"123456"
-                                    }
-                                }
+                                "$ref":"#/components/schemas/Auth"
                             }
                         }
                     }
